[fluentd-elasticsearch] Add ilm configuration (#380)
* add ilm support

Signed-off-by: niklaskhf <niklas@win-techno.com>

* add configuration to README

Signed-off-by: niklaskhf <niklas@win-techno.com>

* bump chart version

Signed-off-by: niklaskhf <niklas@win-techno.com>

* remove trailing spaces

Signed-off-by: niklaskhf <niklas@win-techno.com>

* major version due to new feature

Signed-off-by: niklaskhf <niklas@win-techno.com>

* add example

Signed-off-by: niklaskhf <niklas@win-techno.com>

* remove trailing spaces

Signed-off-by: niklaskhf <niklas@win-techno.com>

Co-authored-by: niklaskhf <niklas@win-techno.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -520,6 +520,13 @@ data:
       logstash_format "#{ENV['LOGSTASH_FORMAT']}"
       index_name "#{ENV['INDEX_NAME']}"
 {{- end }}
+{{- if .Values.elasticsearch.ilm.enabled }}
+      enable_ilm "#{ENV['ENABLE_ILM']}'"
+      ilm_policy_id "#{ENV['ILM_POLICY_ID']}"
+      ilm_policy "#{ENV['ILM_POLICY']}"
+      ilm_policies "#{ENV['ILM_POLICIES']}"
+      ilm_policy_overwrite "#{ENV['ILM_POLICY_OVERWRITE']}"
+{{- end }}
       reconnect_on_error "#{ENV['OUTPUT_RECONNECT_ON_ERROR']}"
       reload_on_failure "#{ENV['OUTPUT_RELOAD_ON_FAILURE']}"
       reload_connections "#{ENV['OUTPUT_RELOAD_CONNECTIONS']}"
