--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -74,23 +74,24 @@ elasticsearch:
     enabled: false
     policy_id: logstash-policy
     policy: {}
-    # policy:
-    #   phases:
-    #     hot:
-    #       min_age: 0ms
-    #       actions:
-    #         rollover:
-    #            max_age: 30d
-    #            max_size: 20gb
-    #         set_priority:
-    #             priority: 100
-    #     delete:
-    #       min_age: 60d
-    #       actions:
-    #         delete:
+      # example for ilm policy config
+      # phases:
+      #   hot:
+      #     min_age: 0ms
+      #     actions:
+      #       rollover:
+      #         max_age: 30d
+      #         max_size: 20gb
+      #       set_priority:
+      #           priority: 100
+      #   delete:
+      #     min_age: 60d
+      #     actions:
+      #       delete:
     policies: {}
-    #  ilm_policy_id1: {}
-    #  ilm_policy_id2: {}
+      # example for ilm policies config
+      # ilm_policy_id1: {}
+      # ilm_policy_id2: {}
     policy_overwrite: false
   path: ""
   scheme: "http"
