--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -521,7 +521,7 @@ data:
       index_name "#{ENV['INDEX_NAME']}"
 {{- end }}
 {{- if .Values.elasticsearch.ilm.enabled }}
-      enable_ilm "#{ENV['ENABLE_ILM']}'"
+      enable_ilm "#{ENV['ENABLE_ILM']}"
       ilm_policy_id "#{ENV['ILM_POLICY_ID']}"
       ilm_policy "#{ENV['ILM_POLICY']}"
       ilm_policies "#{ENV['ILM_POLICIES']}"
