Add suppressTypeName parameter to eliminate ES 7 deprecation warnings (#384)
Signed-off-by: Jared Burns <jared.burns@nike.com>

Co-authored-by: André Bauer <monotek@users.noreply.github.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -531,6 +531,9 @@ data:
       reload_on_failure "#{ENV['OUTPUT_RELOAD_ON_FAILURE']}"
       reload_connections "#{ENV['OUTPUT_RELOAD_CONNECTIONS']}"
       request_timeout "#{ENV['OUTPUT_REQUEST_TIMEOUT']}"
+{{- if .Values.elasticsearch.suppressTypeName }}
+      suppress_type_name "#{ENV['OUTPUT_SUPPRESS_TYPE_NAME']}"
+{{- end }}
 {{- if .Values.elasticsearch.buffer.enabled }}
       <buffer>
         @type "#{ENV['OUTPUT_BUFFER_TYPE']}"
