--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -3,7 +3,7 @@ image:
 ## Specify an imagePullPolicy (Required)
 ## It's recommended to change this to 'Always' if the image tag is 'latest'
 ## ref: http://kubernetes.io/docs/user-guide/images/#updating-images
-  tag: v3.0.2
+  tag: v3.0.4
   pullPolicy: IfNotPresent
   ## Optionally specify an array of imagePullSecrets.
   ## Secrets must be manually created in the namespace.
@@ -104,6 +104,7 @@ elasticsearch:
   reloadOnFailure: false
   reloadConnections: false
   requestTimeout: "5s"
+  suppressTypeName: false
   buffer:
     enabled: true
     type: "file"
