--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -97,9 +97,9 @@ spec:
         - name: ILM_POLICY_ID
           value: {{ .Values.elasticsearch.ilm.policy_id | quote }}
         - name: ILM_POLICY 
-          value: {{ .Values.elasticsearch.ilm.policy | quote }}
+          value: {{ toJson .Values.elasticsearch.ilm.policy | quote }}
         - name: ILM_POLICIES
-          value: {{ .Values.elasticsearch.ilm.policies | quote }}
+          value: {{ toJson .Values.elasticsearch.ilm.policies | quote }}
         - name: ILM_POLICY_OVERWRITE
           value: {{ .Values.elasticsearch.ilm.policy_overwrite | quote }}
 {{- end }}          
