--- a/charts/fluentd-elasticsearch/Chart.yaml
+++ b/charts/fluentd-elasticsearch/Chart.yaml
@@ -1,8 +1,9 @@
+apiVersion: v1
 name: fluentd-elasticsearch
-version: 2.0.7
-appVersion: 2.3.2
+version: 10.0.0
+appVersion: 3.0.4
 home: https://www.fluentd.org/
-description: DEPRECATED! - A Fluentd Helm chart for Kubernetes with Elasticsearch output
+description: A Fluentd Helm chart for Kubernetes with Elasticsearch output
 icon: https://raw.githubusercontent.com/fluent/fluentd-docs/master/public/logo/Fluentd_square.png
 keywords:
 - fluentd
@@ -11,9 +12,11 @@ keywords:
 - detect-exceptions
 - logging
 sources:
-- https://github.com/kubernetes/charts/stable/fluentd-elasticsearch
+- https://github.com/kiwigrid/helm-charts/tree/master/charts/fluentd-elasticsearch
 - https://github.com/fluent/fluentd-kubernetes-daemonset
 - https://github.com/GoogleCloudPlatform/fluent-plugin-detect-exceptions
 - https://github.com/kubernetes/kubernetes/tree/master/cluster/addons/fluentd-elasticsearch/fluentd-es-image
+maintainers:
+- name: monotek
+  email: andre.bauer@kiwigrid.com
 engine: gotpl
-deprecated: true
