--- a/charts/fluentd-elasticsearch/templates/clusterrolebinding.yaml
+++ b/charts/fluentd-elasticsearch/templates/clusterrolebinding.yaml
@@ -1,18 +1,18 @@
 {{- if .Values.rbac.create -}}
+{{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ include "fluentd-elasticsearch.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-    helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+{{ include "fluentd-elasticsearch.labels" . | indent 4 }}
+    {{- if semverCompare "< 1.6" $striped_version }}
     kubernetes.io/cluster-service: "true"
+    {{- end }}
     addonmanager.kubernetes.io/mode: Reconcile
 subjects:
 - kind: ServiceAccount
-  name: {{ template "fluentd-elasticsearch.serviceAccountName" . }}
+  name: {{ if .Values.serviceAccount.name }}{{ .Values.serviceAccount.name }}{{ else }}{{ include "fluentd-elasticsearch.fullname" . }}{{ end }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
