--- a/charts/fluentd-elasticsearch/templates/pod-security-policy.yaml
+++ b/charts/fluentd-elasticsearch/templates/pod-security-policy.yaml
@@ -1,14 +1,18 @@
 {{- if .Values.podSecurityPolicy.enabled }}
+{{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
+{{- if semverCompare "> 1.15" $striped_version -}}
+apiVersion: policy/v1beta1
+{{- else -}}
 apiVersion: extensions/v1beta1
+{{- end }}
 kind: PodSecurityPolicy
 metadata:
   name: {{ template "fluentd-elasticsearch.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-    helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+{{ include "fluentd-elasticsearch.labels" . | indent 4 }}
+    {{- if semverCompare "< 1.6" $striped_version }}
     kubernetes.io/cluster-service: "true"
+    {{- end }}
     addonmanager.kubernetes.io/mode: Reconcile
   annotations:
 {{- if .Values.podSecurityPolicy.annotations }}
@@ -23,11 +27,11 @@ spec:
     - 'hostPath'
     - 'secret'
   allowedHostPaths:
-    - pathPrefix: /var/log
+    - pathPrefix: {{ .Values.hostLogDir.varLog}}
       readOnly: false
-    - pathPrefix: /var/lib/docker/containers
+    - pathPrefix: {{ .Values.hostLogDir.dockerContainers}}
       readOnly: true
-    - pathPrefix: /usr/lib64
+    - pathPrefix: {{ .Values.hostLogDir.libSystemdDir}}
       readOnly: true
   hostNetwork: false
   hostPID: false
