--- a/charts/fluentd-elasticsearch/templates/rolebinding.yaml
+++ b/charts/fluentd-elasticsearch/templates/rolebinding.yaml
@@ -1,15 +1,15 @@
 
 {{- if .Values.podSecurityPolicy.enabled }}
-apiVersion: rbac.authorization.k8s.io/v1beta1
+{{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ template "fluentd-elasticsearch.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-    helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+{{ include "fluentd-elasticsearch.labels" . | indent 4 }}
+    {{- if semverCompare "< 1.6" $striped_version }}
     kubernetes.io/cluster-service: "true"
+    {{- end }}
     addonmanager.kubernetes.io/mode: Reconcile
 roleRef:
   kind: Role
