--- a/charts/fluentd-elasticsearch/templates/service.yaml
+++ b/charts/fluentd-elasticsearch/templates/service.yaml
@@ -1,30 +1,32 @@
 {{- if .Values.service }}
+{{- range $port := .Values.service.ports  }}
+{{- $service_type := $port.type | default "ClusterIP" }}
+{{- $striped_version := (split "-" $.Capabilities.KubeVersion.GitVersion)._0 -}}
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fluentd-elasticsearch.fullname" . }}
+  name: {{ include "fluentd-elasticsearch.fullname" $ | trunc 50 }}-{{ $port.name | trunc 12 }}
   labels:
-    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-    helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+{{ include "fluentd-elasticsearch.labels" $ | indent 4 }}
+    {{- if semverCompare "< 1.6" $striped_version }}
     kubernetes.io/cluster-service: "true"
+    {{- end }}
     addonmanager.kubernetes.io/mode: Reconcile
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ $service_type }}
   ports:
-  {{- range $port := .Values.service.ports }}
     - name: {{ $port.name }}
       port: {{ $port.port }}
       targetPort: {{ $port.port }}
-      {{- if $port.nodePort }}
+      {{- if and ($port.nodePort) (eq $service_type "NodePort") }}
       nodePort: {{ $port.nodePort }}
       {{- end }}
       {{- if $port.protocol }}
       protocol: {{ $port.protocol }}
       {{- end }}
-  {{- end }}
   selector:
-    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" $ }}
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+{{- end }}
 {{- end }}
