--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -2,5 +2,4 @@ helm-extra-args: --timeout 1200s
 check-version-increment: true
 debug: true
 chart-repos:
-  - kiwigrid=https://kiwigrid.github.io/
-  - minio=https://helm.min.io
+  - kokuwa=https://kokuwaio.github.io/helm-charts
