--- a/.github/workflows/kubeval.yaml
+++ b/.github/workflows/kubeval.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   kubeval-chart:
     runs-on: ubuntu-latest
-    needs: lint-chart
+    needs: lint-bash
     strategy:
       matrix:
         k8s:
