--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Lint Code Base
     runs-on: ubuntu-latest
+    needs: lint-bash
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
