--- a/.github/workflows/lint-test-chart.yaml
+++ b/.github/workflows/lint-test-chart.yaml
@@ -27,7 +27,7 @@ jobs:
           config: .github/ct.yaml
 
       - name: Create kind ${{ matrix.k8s }} cluster
-        uses: helm/kind-action@v1.0.0
+        uses: helm/kind-action@master
         with:
           config: .github/kind-config.yaml
           node_image: kindest/node:${{ matrix.k8s }}
