--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,7 @@ jobs:
 
       - name: Run chart-testing (lint)
         uses: helm/chart-testing-action@master
+        id: lint-chart
         with:
           command: lint
           config: .github/ct.yaml
@@ -49,7 +50,7 @@ jobs:
   kubeval-chart:
     runs-on: ubuntu-latest
     needs: lint-chart
-    if: jobs.lint-chart.outputs.changed == 'true'
+    if: step.lint-chart.outputs.changed == 'true'
     strategy:
       matrix:
         k8s:
