--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,13 +87,13 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Create kind ${{ matrix.k8s }} cluster
-        uses: helm/kind-action@master
+        uses: helm/kind-action@v1.1.0
         with:
           config: .github/kind-config.yaml
           node_image: kindest/node:${{ matrix.k8s }}
 
       - name: Run chart-testing (install)
-        uses: helm/chart-testing-action@master
+        uses: helm/chart-testing-action@v1.1.0
         with:
           command: install
           config: .github/ct.yaml
