added branch to ct config
Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -1,5 +1,6 @@
 helm-extra-args: --timeout 1200s
 check-version-increment: true
 debug: true
+target-branch: main
 chart-repos:
   - kokuwa=https://kokuwaio.github.io/helm-charts
