--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,9 @@
 name: ci
 
-on: pull_request
+on: 
+  pull_request:
+    paths:
+      - 'charts/**/[cC]hart.yaml'
 
 jobs:
   lint-bash-scripts:
@@ -87,7 +90,7 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Create kind ${{ matrix.k8s }} cluster
-        uses: helm/kind-action@v1.1.0
+        uses: helm/kind-action@1.0.0
         with:
           config: .github/kind-config.yaml
           node_image: kindest/node:${{ matrix.k8s }}
