--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,7 +90,7 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Create kind ${{ matrix.k8s }} cluster
-        uses: helm/kind-action@1.0.0
+        uses: helm/kind-action@master
         with:
           config: .github/kind-config.yaml
           node_image: kindest/node:${{ matrix.k8s }}
