[fluentd-elasticsearch] fix source links (#2)
* fix source links

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix github action version

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix job dependencies

Signed-off-by: André Bauer <monotek23@gmail.com>

* ci improvements

Signed-off-by: André Bauer <monotek23@gmail.com>

* remove action dependencies

Signed-off-by: André Bauer <monotek23@gmail.com>

* renamed files & update chart action version

Signed-off-by: André Bauer <monotek23@gmail.com>

* use kind master actionersion

Signed-off-by: André Bauer <monotek23@gmail.com>

* use single ci file

Signed-off-by: André Bauer <monotek23@gmail.com>

* removed name

Signed-off-by: André Bauer <monotek23@gmail.com>

* enable yaml linter

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix workflow

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix typo

Signed-off-by: André Bauer <monotek23@gmail.com>

* remove if

Signed-off-by: André Bauer <monotek23@gmail.com>

* update shellcheck container

Signed-off-by: André Bauer <monotek23@gmail.com>

* removed name

Signed-off-by: André Bauer <monotek23@gmail.com>

* removed blank line

Signed-off-by: André Bauer <monotek23@gmail.com>

* use v1.1.0

Signed-off-by: André Bauer <monotek23@gmail.com>

* added branch to ct config

Signed-off-by: André Bauer <monotek23@gmail.com>

* added path check

Signed-off-by: André Bauer <monotek23@gmail.com>

* kind master

Signed-off-by: André Bauer <monotek23@gmail.com>

* fix pr template

Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -1,6 +1,6 @@
 helm-extra-args: --timeout 1200s
 check-version-increment: true
 debug: true
+target-branch: main
 chart-repos:
-  - kiwigrid=https://kiwigrid.github.io/
-  - minio=https://helm.min.io
+  - kokuwa=https://kokuwaio.github.io/helm-charts
