updated mysqldump chart
Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/charts/mysqldump/templates/gcpserviceaccount.yaml
+++ b/charts/mysqldump/templates/gcpserviceaccount.yaml
@@ -3,8 +3,8 @@ apiVersion: gcp.kiwigrid.com/v1beta1
 kind: GcpServiceAccount
 metadata:
   labels:
+    {{- include "mysqldump.labels" . | nindent 4 }}
     controller-tools.k8s.io: "1.0"
-{{ include "mysqldump.labels" . | indent 4 }}
   name: {{ template "mysqldump.fullname" . }}
 spec:
   serviceAccountIdentifier: {{ template "mysqldump.serviceAccountName" . }}
