--- a/charts/mysqldump/templates/secret.yaml
+++ b/charts/mysqldump/templates/secret.yaml
@@ -4,7 +4,7 @@ kind: Secret
 metadata:
   name: "{{ template "mysqldump.fullname" . }}"
   labels:
-{{ include "mysqldump.labels" . | indent 4 }}
+    {{- include "mysqldump.labels" . | nindent 4 }}
 type: Opaque
 data:
   MYSQL_PWD: {{ .Values.mysql.password | b64enc | quote }}
@@ -19,7 +19,7 @@ kind: Secret
 metadata:
   name: "{{ template "mysqldump.fullname" . }}-ssh-privatekey"
   labels:
-{{ include "mysqldump.labels" . | indent 4 }}
+    {{- include "mysqldump.labels" . | nindent 4 }}
 type: Opaque
 stringData:
   id_rsa: {{ .Values.upload.ssh.privatekey | quote }}
@@ -33,7 +33,7 @@ kind: Secret
 metadata:
   name: {{ template "mysqldump.gcpsecretName" . }}
   labels:
-{{ include "mysqldump.labels" . | indent 4 }}
+    {{- include "mysqldump.labels" . | nindent 4 }}
 type: Opaque
 stringData:
   {{ .Values.upload.googlestoragebucket.secretFileName }}: {{ .Values.upload.googlestoragebucket.jsonKeyfile | quote }}
