--- a/charts/mysqldump/templates/configmap.yaml
+++ b/charts/mysqldump/templates/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ template "mysqldump.fullname" . }}
   labels:
-{{ include "mysqldump.labels" . | indent 4 }}
+    {{- include "mysqldump.labels" . | nindent 4 }}
 data:
   MYSQL_HOST: {{ .Values.mysql.host | quote }}
   MYSQL_USERNAME: {{ .Values.mysql.username | quote }}
@@ -25,8 +25,10 @@ metadata:
   labels:
 {{ include "mysqldump.labels" . | indent 4 }}
 data:
+{{- if .Values.upload.openstack.enabled }}
   openstack-upload.py: |-
 {{ .Files.Get "files/openstack-upload.py" | indent 4 }}
+{{- end }}
   backup.sh: |-
     #!/bin/sh
     #
