--- a/charts/mysqldump/templates/cron.yaml
+++ b/charts/mysqldump/templates/cron.yaml
@@ -4,7 +4,7 @@ kind: CronJob
 metadata:
   name: {{ template "mysqldump.fullname" . }}
   labels:
-{{ include "mysqldump.labels" . | indent 4 }}
+    {{- include "mysqldump.labels" . | nindent 4 }}
 spec:
   schedule: "{{ .Values.schedule }}"
   successfulJobsHistoryLimit: {{ .Values.successfulJobsHistoryLimit }}
