--- a/charts/mysqldump/templates/job.yaml
+++ b/charts/mysqldump/templates/job.yaml
@@ -3,8 +3,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: {{ template "mysqldump.fullname" . }}
-  labels:
-{{ include "mysqldump.labels" . | indent 4 }}
+    {{- include "mysqldump.labels" . | nindent 4 }}
 spec:
   backoffLimit: 1
   template:
