--- a/charts/mysqldump/templates/pvc.yaml
+++ b/charts/mysqldump/templates/pvc.yaml
@@ -5,7 +5,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: {{ template "mysqldump.fullname" . }}
   labels:
-{{ include "mysqldump.labels" . | indent 4 }}
+    {{- include "mysqldump.labels" . | nindent 4 }}
 spec:
   accessModes: [{{ .Values.persistence.accessMode | quote }}]
   {{- if .Values.persistence.storageClass }}
