--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,11 +24,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Lint Code Base
-        uses: docker://github/super-linter:v3.12.0
+        uses: github/super-linter@v3
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MARKDOWN_CONFIG_FILE: .github/markdown-lint.yaml
+          MARKDOWN_CONFIG_FILE: /github/workspace/.github/markdown-lint.yaml
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_BASH: false
           VALIDATE_KUBERNETES_KUBEVAL: false
