test bash linter
Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,16 +6,16 @@ on:
       - 'charts/**/[cC]hart.yaml'
 
 jobs:
-  lint-bash-scripts:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  # lint-bash-scripts:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
 
-      - name: Lint Bash scripts
-        uses: docker://koalaman/shellcheck-alpine:v0.7.1
-        with:
-          args: .github/lint-scripts.sh
+  #     - name: Lint Bash scripts
+  #       uses: docker://koalaman/shellcheck-alpine:v0.7.1
+  #       with:
+  #         args: .github/lint-scripts.sh
 
   super-linter:
     runs-on: ubuntu-latest
@@ -29,7 +29,7 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: false
-          VALIDATE_BASH: false
+          #VALIDATE_BASH: false
           VALIDATE_KUBERNETES_KUBEVAL: false
           VALIDATE_YAML: false
 
