--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
   lint-chart:
     runs-on: ubuntu-latest
     needs: 
-      - lint-bash-scripts
+      #- lint-bash-scripts
       - super-linter
     steps:
       - name: Checkout
