--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,17 +6,6 @@ on:
       - 'charts/**/[cC]hart.yaml'
 
 jobs:
-  lint-bash-scripts:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Lint Bash scripts
-        uses: docker://koalaman/shellcheck-alpine:v0.7.1
-        with:
-          args: .github/lint-scripts.sh
-
   super-linter:
     runs-on: ubuntu-latest
     steps:
@@ -26,16 +15,14 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v3
         env:
-          VALIDATE_ALL_CODEBASE: false
-          VALIDATE_YAML: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_KUBERNETES_KUBEVAL: false
+          VALIDATE_YAML: false
 
   lint-chart:
     runs-on: ubuntu-latest
-    needs: 
-      - lint-bash-scripts
-      - super-linter
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -51,7 +38,9 @@ jobs:
 
   kubeval-chart:
     runs-on: ubuntu-latest
-    needs: lint-chart
+    needs: 
+      - lint-chart
+      - super-linter
     strategy:
       matrix:
         k8s:
