[fluentd-elasticsearch] - Enable additional plugin to install
Signed-off-by: Lord-Y <Lord-Y@users.noreply.github.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -138,6 +138,10 @@ secret: []
 #   secret_name: elasticsearch
 #   secret_key: password
 
+additionalPlugins: []
+# - name: fluent-plugin-s3
+#   version: 1.1.11
+
 rbac:
   create: true
 
