--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -60,6 +60,16 @@ spec:
       - name: {{ include "fluentd-elasticsearch.fullname" . }}
         image:  "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+        command:
+          - /bin/bash
+        args:
+          - '-c'
+          - >-
+            {{- range .Values.additionalPlugins }}
+            gem install {{ .name }} --version {{ .version }} &&
+            {{- end }}
+            /entrypoint.sh
+        {{- end }}
         env:
         - name: FLUENTD_ARGS
           value: {{ .Values.fluentdArgs | quote }}
