--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -91,18 +91,18 @@ spec:
           value: {{ .Values.elasticsearch.logstash.prefixSeparator | quote }}
         - name: INDEX_NAME
           value: {{ .Values.elasticsearch.indexName | quote }}
-{{- if .Values.elasticsearch.ilm.enabled }}          
+{{- if .Values.elasticsearch.ilm.enabled }}
         - name: ENABLE_ILM
           value: {{ .Values.elasticsearch.ilm.enabled | quote }}
         - name: ILM_POLICY_ID
           value: {{ .Values.elasticsearch.ilm.policy_id | quote }}
-        - name: ILM_POLICY 
-          value: {{ toJson .Values.elasticsearch.ilm.policy | quote }}
+        - name: ILM_POLICY
+          value: '{"policy":{{ toJson .Values.elasticsearch.ilm.policy }}}'
         - name: ILM_POLICIES
           value: {{ toJson .Values.elasticsearch.ilm.policies | quote }}
         - name: ILM_POLICY_OVERWRITE
           value: {{ .Values.elasticsearch.ilm.policy_overwrite | quote }}
-{{- end }}          
+{{- end }}
         - name: OUTPUT_SCHEME
           {{- if .Values.awsSigningSidecar.enabled }}
           value: 'http'
