--- a/charts/fluentd-elasticsearch/templates/pod-security-policy.yaml
+++ b/charts/fluentd-elasticsearch/templates/pod-security-policy.yaml
@@ -1,18 +1,10 @@
 {{- if .Values.podSecurityPolicy.enabled }}
-{{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
-{{- if semverCompare "> 1.15" $striped_version -}}
 apiVersion: policy/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
 kind: PodSecurityPolicy
 metadata:
   name: {{ template "fluentd-elasticsearch.fullname" . }}
   labels:
-{{ include "fluentd-elasticsearch.labels" . | indent 4 }}
-    {{- if semverCompare "< 1.6" $striped_version }}
-    kubernetes.io/cluster-service: "true"
-    {{- end }}
+    {{- include "fluentd-elasticsearch.labels" . | nindent 4 }}
     addonmanager.kubernetes.io/mode: Reconcile
   annotations:
 {{- if .Values.podSecurityPolicy.annotations }}
