--- a/charts/fluentd-elasticsearch/templates/service-account.yaml
+++ b/charts/fluentd-elasticsearch/templates/service-account.yaml
@@ -1,20 +1,13 @@
 {{- if .Values.serviceAccount.create -}}
-{{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ if .Values.serviceAccount.name }}{{ .Values.serviceAccount.name }}{{ else }}{{ include "fluentd-elasticsearch.fullname" . }}{{ end }}
+  name: {{ include "fluentd-elasticsearch.serviceAccountName" . }}
   labels:
-    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-    helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    {{- if semverCompare "< 1.6" $striped_version }}
-    kubernetes.io/cluster-service: "true"
-    {{- end }}
+    {{- include "fluentd-elasticsearch.labels" . | nindent 4 }}
     addonmanager.kubernetes.io/mode: Reconcile
+  {{- with .Values.serviceAccount.annotations }}
   annotations:
-{{- if .Values.serviceAccount.annotations }}
-{{ toYaml .Values.serviceAccount.annotations | indent 4 }}
-{{- end }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end -}}
