use chart testing action v1.1.0 for lint
Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Run chart-testing (lint)
-        uses: helm/chart-testing-action@master
+        uses: helm/chart-testing-action@v1.1.0
         with:
           command: lint
           config: .github/ct.yaml
