--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,20 +6,20 @@ on:
       - 'charts/**/[cC]hart.yaml'
 
 jobs:
-  super-linter:
+  codespell:
+    name: codespell
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Lint Code Base
-        uses: github/super-linter@v3
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_ALL_CODEBASE: false
-          VALIDATE_KUBERNETES_KUBEVAL: false
-          VALIDATE_YAML: false
+      - name: Codespell
+        uses: codespell-project/actions-codespell@master
+        with:
+          skip: .git
+          ignore_words_list: iam,aks
+          check_filenames: true
+          check_hidden: true
 
   lint-chart:
     runs-on: ubuntu-latest
@@ -36,9 +36,25 @@ jobs:
           command: lint
           config: .github/ct.yaml
 
+  super-linter:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Lint Code Base
+        uses: github/super-linter@v3
+        env:
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_KUBERNETES_KUBEVAL: false
+          VALIDATE_YAML: false
+
   kubeval-chart:
     runs-on: ubuntu-latest
-    needs: 
+    needs:
+      - codespell
       - lint-chart
       - super-linter
     strategy:
