chore: Add words to codespell ignore words list
pullrequest for obvious reasons.
hart because of the regular expression [Cc]hart that's used.

Signed-off-by: Moritz Reinhardt <moreinhardt@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: codespell-project/actions-codespell@master
         with:
           skip: .git
-          ignore_words_list: iam,aks
+          ignore_words_list: iam,aks,pullrequest,hart
           check_filenames: true
           check_hidden: true
 
