--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: codespell-project/actions-codespell@master
         with:
           skip: ".git"
-          ignore_words_list: "iam,aks,gke,[cC]hart.yaml"
+          ignore_words_list: "iam,aks,gke,hart"
           check_filenames: true
           check_hidden: true
 
