--- a/charts/mysqldump/Chart.yaml
+++ b/charts/mysqldump/Chart.yaml
@@ -16,3 +16,8 @@ maintainers:
 - name: monotek
   email: monotek23@gmail.com
 type: application
+dependencies:
+  - name: mariadb
+    version: "9.0.1"
+    repository: "https://charts.bitnami.com/bitnami"
+    condition: mariadb.enabled
