--- a/charts/mysqldump/values.yaml
+++ b/charts/mysqldump/values.yaml
@@ -3,9 +3,9 @@
 # Declare variables to be passed into your templates.
 
 image:
-  registry: docker.io
+  registry: quay.io
   repository: monotek/gcloud-mysql
-  tag: "14"
+  tag: "master-1"
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images#
