--- a/charts/mysqldump/templates/secrets.yaml
+++ b/charts/mysqldump/templates/secrets.yaml
@@ -7,7 +7,11 @@ metadata:
     {{- include "mysqldump.labels" . | nindent 4 }}
 type: Opaque
 data:
+{{- if .Values.mysql.password }}
   MYSQL_PWD: {{ .Values.mysql.password | b64enc | quote }}
+{{- else }}
+  MYSQL_PWD: {{ randAlphaNum 40 | b64enc | quote }}
+{{- end }}
 {{- if and (.Values.upload.openstack.enabled) (not .Values.upload.openstack.existingSecret) }}
   OS_PASSWORD: {{ .Values.upload.openstack.password | b64enc | quote }}
 {{- end }}
