--- a/charts/mysqldump/values.yaml
+++ b/charts/mysqldump/values.yaml
@@ -19,9 +19,9 @@ fullnameOverride: ""
 mysql:
 ## Without a host set, this chart will not do anything as it is expected
 ## to be used only when there's an existing database to backup.
-  host: ""
+  host: "localhost"
   username: root
-  # overridden by existingDbSecret / existingDbSecretKey if set
+  # overridden by existingSecret / existingSecretKey if set
   # no password means random value
   password: ""
   port: 3306
