--- a/charts/mysqldump/templates/secrets.yaml
+++ b/charts/mysqldump/templates/secrets.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.mysql.password }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,16 +6,16 @@ metadata:
     {{- include "mysqldump.labels" . | nindent 4 }}
 type: Opaque
 data:
-{{- if .Values.mysql.password }}
+{{- if and (.Values.mysql.password) (not .Values.mysql.existingSecret) }}
   MYSQL_PWD: {{ .Values.mysql.password | b64enc | quote }}
 {{- else }}
   MYSQL_PWD: {{ randAlphaNum 40 | b64enc | quote }}
 {{- end }}
 {{- if and (.Values.upload.openstack.enabled) (not .Values.upload.openstack.existingSecret) }}
   OS_PASSWORD: {{ .Values.upload.openstack.password | b64enc | quote }}
-{{- end }}
 ---
 {{- end }}
+
 {{- if .Values.upload.ssh.enabled }}
 apiVersion: v1
 kind: Secret
@@ -29,6 +28,8 @@ stringData:
   id_rsa: {{ .Values.upload.ssh.privatekey | quote }}
 ---
 {{- end }}
+
+
 {{- if .Values.upload.googlestoragebucket.enabled }}
 {{- if not .Values.upload.googlestoragebucket.existingSecret }}
 {{- if not .Values.upload.googlestoragebucket.usingGCPController }}
