--- a/charts/mysqldump/values.yaml
+++ b/charts/mysqldump/values.yaml
@@ -20,7 +20,7 @@ mysql:
 ## Without a host set, this chart will not do anything as it is expected
 ## to be used only when there's an existing database to backup.
   host: "localhost"
-  username: root
+  username: "root"
   # overridden by existingSecret / existingSecretKey if set
   # no password means random value
   password: ""
