--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: codespell-project/actions-codespell@master
         with:
           skip: .git
-          ignore_words_list: iam,aks,gke,hart,pullRequest
+          ignore_words_list: hart,pullRequest
           check_filenames: true
           check_hidden: true
           only_warn: true
