--- a/charts/mysqldump/templates/job.yaml
+++ b/charts/mysqldump/templates/job.yaml
@@ -3,6 +3,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: {{ template "mysqldump.fullname" . }}
+  labels:
     {{- include "mysqldump.labels" . | nindent 4 }}
 spec:
   backoffLimit: 1
