--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -1,6 +1,7 @@
 helm-extra-args: --timeout 600s
 check-version-increment: true
 debug: true
+upgrade: true
 target-branch: main
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
