remove optionals in config.yml to fix codespell
Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,8 @@ jobs:
       - name: Codespell
         uses: codespell-project/actions-codespell@master
         with:
-          ignore_words_file: .github/codespell-ignore.list
+          skip: ".git,.github/codespell-ignore.list"
+          ignore_words_list: .github/codespell-ignore.list
           check_filenames: true
           check_hidden: true
           only_warn: true
