remove optionals in config.yml to fix codespell
Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: codespell-project/actions-codespell@master
         with:
           skip: ".git,.github/codespell-ignore.list"
-          ignore_words_list: .github/codespell-ignore.list
+          ignore_words_file: .github/codespell-ignore.list
           check_filenames: true
           check_hidden: true
           only_warn: true
